objects/PMC_SS_ProductRequest__c.object
<CustomObject>
    <description>This is routed to MDM to review/approve and enter Case into SAP</description>
    <fields>
        <fullName>PMC_SS_Blend__c</fullName>
        <label>Blend %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Product Requests</relationshipLabel>
        <relationshipName>Product_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Request</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Product Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>